Fixed spacing of the container

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ header {
   justify-content: flex-start;
   width: 100%;
   height: 10%;
+  box-shadow: 0.5vh 0.5vh 0.5vh lightgray;
 }
 
 header h1 {
@@ -56,19 +57,26 @@ header button:hover {
   display: flex;
   flex-direction: row;
   align-items: center;
+  /* justify-content: space-around; */
   margin-top: 3vh;
   margin-left: 5%;
   margin-right: 5%;
-  width: 100%;
-  height: 100%;
+  height: 75vh;
 }
 
 #container button {
   color: #ef476f;
+  box-shadow: 0.2vh 0.2vh 0.2vh lightgray;
 }
 
 .message {
   width: 50%;
+  padding: 2%;
+  border-style: solid;
+  border-radius: 20px;
+  border-color: #ef476f;
+  background-color: #ffffff;
+  box-shadow: 0.5vh 0.5vh 0.5vh lightgray;
 }
 
 .right {
@@ -84,6 +92,7 @@ header button:hover {
   display: grid;
   grid-template-rows: repeat(var(--grid-rows), 1fr);
   grid-template-columns: repeat(var(--grid-cols), 1fr);
+  border-collapse: collapse;
   justify-content: center;
 }
 
